<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Notiz hinzufügen.</string>
    <string name="enter_the_title">Geben Sie den Titel ein.</string>
    <string name="enter_the_description">Geben Sie die Beschreibung ein.</string>
    <string name="edit_note">Notiz bearbeiten.</string>
    <string name="enter_the_title1">Titel eingeben.</string>
    <string name="enter_the_description1">Geben Sie die Beschreibung.</string>
    <string name="note_title">Notiz Überschrift.</string>
    <string name="description">Beschreibung.</string>
    <string name="loading_text">Lädt...</string>
    <string name="edit_fab">edit_fab</string>
    <string name="update_note">update_note</string>
    <string name="save_note">save_note</string>
    <string name="delete_note">delete_note</string>
    <string name="noch_keine_notizen_ntippe_auf_um_eine_zu_erstellen">Noch keine Notizen.\nTippe auf + um eine zu erstellen!</string>
    <string name="search">Search</string>
    <!-- Strings used for fragments for navigation -->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

</resources>