<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <EditText
        android:id="@+id/updateNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_the_title1"
        android:padding="12dp"
        android:textSize="20sp"
        android:background="@drawable/note_border"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace" />

    <EditText
        android:id="@+id/updateNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_the_description1"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_below="@id/updateNoteTitle"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:background="@drawable/note_border"
        android:fontFamily="monospace" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_done_24"
        android:contentDescription="@string/update_note" />

</RelativeLayout>
