<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".fragments.UpdateNoteFragment">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/edit_note"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_below="@id/editNoteHeading"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_the_title1"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:textSize="20sp"
        android:background="@drawable/note_border"
        android:maxLines="1"
        android:fontFamily="monospace"/>

    <EditText
        android:id="@+id/editNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/editNoteTitle"
        android:layout_marginTop="12dp"
        android:background="@drawable/note_border"
        android:fontFamily="monospace"
        android:gravity="top"
        android:hint="@string/enter_the_description1"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:textSize="18sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/black"
        app:tint="@color/white"
        android:src="@drawable/baseline_done_24"
        android:contentDescription="@string/edit_fab" />
</RelativeLayout>
