<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/add_note"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_title"
            android:textColorHint="@color/black"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/addNoteHeading"
            android:background="@drawable/note_border"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="monospace"/>
        <EditText
            android:id="@+id/addNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_the_description"
            android:textColorHint="@color/black"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:background="@drawable/note_border"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="12dp" />
    </RelativeLayout>
</LinearLayout>
